--- a/index.html
+++ b/index.html
@@ -1,1 +1,207 @@
-<!DOCTYPE html> <html lang="kk"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>IP-Legal.kz — Цифрлық контентті заңды пайдалану</title> <style> * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; } body { line-height: 1.6; color: #333; background-color: #f9f9f9; } .container { width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 20px; } /* Сайттың жоғарғы бөлігі */ header { background-color: #2c3e50; color: white; padding: 1.5rem 0; box-shadow: 0 2px 10px rgba(0,0,0,0.1); } .header-content { display: flex; justify-content: space-between; align-items: center; } .logo { font-size: 1.8rem; font-weight: bold; } .logo span { color: #3498db; } nav ul { display: flex; list-style: none; } nav li { margin-left: 1.5rem; } nav a { color: white; text-decoration: none; font-weight: 500; transition: color 0.3s; } nav a:hover { color: #3498db; } /* Негізгі мазмұн */ main { padding: 2rem 0; min-height: 70vh; } .hero { background-color: #fff; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); margin-bottom: 2rem; } .hero h1 { color: #2c3e50; margin-bottom: 1rem; } .section { background-color: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); margin-bottom: 2rem; } .section h2 { color: #2c3e50; margin-bottom: 1rem; padding-bottom: 0.5rem; border-bottom: 2px solid #3498db; } .infographic { display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem; margin: 2rem 0; } .infographic-item { background-color: #e8f4fc; border-radius: 8px; padding: 1.5rem; width: calc(33.333% - 1rem); min-width: 200px; text-align: center; transition: transform 0.3s; } .infographic-item:hover { transform: translateY(-5px); } .infographic-item i { font-size: 2.5rem; color: #3498db; margin-bottom: 1rem; } .content-image { width: 100%; max-width: 600px; height: auto; border-radius: 8px; margin: 1rem 0; display: block; } .image-caption { font-style: italic; color: #666; font-size: 0.9rem; margin-bottom: 1.5rem; } .license-list { list-style-type: none; margin: 1.5rem 0; } .license-list li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; } .license-list li:before { content: "✓"; color: #27ae60; position: absolute; left: 0; font-weight: bold; } .violation-list { list-style-type: none; margin: 1.5rem 0; } .violation-list li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; } .violation-list li:before { content: "✗"; color: #e74c3c; position: absolute; left: 0; font-weight: bold; } /* Сайттың төменгі бөлігі */ footer { background-color: #2c3e50; color: white; padding: 2rem 0; margin-top: 2rem; } .footer-content { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; } .footer-copyright { font-size: 0.9rem; color: #bdc3c7; } /* Адаптивті дизайн */ @media (max-width: 768px) { .header-content { flex-direction: column; text-align: center; } nav ul { margin-top: 1rem; flex-wrap: wrap; justify-content: center; } nav li { margin: 0.5rem; } .infographic-item { width: calc(50% - 1rem); } .footer-content { flex-direction: column; text-align: center; } } @media (max-width: 480px) { .infographic-item { width: 100%; } } /* Заңдылық белгілері үшін арнайы стильдер */ .legal-badge { background-color: #27ae60; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.9rem; display: inline-block; margin-top: 1rem; } .illegal-badge { background-color: #e74c3c; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.9rem; display: inline-block; margin-top: 1rem; } .law-reference { background-color: #f8f9fa; border-left: 4px solid #3498db; padding: 1rem; margin: 1.5rem 0; } .warning-box { background-color: #fff3cd; border: 1px solid #ffeaa7; border-left: 4px solid #f39c12; padding: 1rem; margin: 1.5rem 0; border-radius: 4px; } .movie-grid, .music-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 1.5rem; margin: 1.5rem 0; } .movie-item, .music-item { background-color: #f8f9fa; border-radius: 8px; overflow: hidden; transition: transform 0.3s; } .movie-item:hover, .music-item:hover { transform: translateY(-5px); } .movie-img, .music-img { width: 100%; height: 150px; object-fit: cover; } .movie-info, .music-info { padding: 1rem; } .download-btn { display: inline-block; background-color: #e74c3c; color: white; padding: 0.5rem 1rem; border-radius: 4px; text-decoration: none; margin-top: 0.5rem; font-weight: bold; } </style> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> </head> <body> <!-- Сайттың жоғарғы бөлігі --> <header> <div class="container header-content"> <div class="logo">IP-<span>Legal</span>.kz</div> <nav> <ul> <li><a href="#home">Басты бет</a></li> <li><a href="#content">Контент</a></li> <li><a href="#licenses">Лицензиялар</a></li> <li><a href="#legal">Құқықтық ақпарат</a></li> </ul> </nav> </div> </header> <!-- Негізгі мазмұн --> <main class="container"> <!-- Басты бет --> <section id="home" class="hero"> <h1>Цифрлық контентті заңды пайдалану</h1> <p>Бұл сайт авторлық құқық мәселелеріне және цифрлық контентті заңды пайдалануға арналған. Біз интернеттегі материалдарды қолданудың заңдылығы мен нәзіктіктерін түсінуге көмектесеміз.</p> <div class="infographic"> <div class="infographic-item"> <i class="fas fa-book"></i> <h3>Әдеби шығармалар</h3> <p>Кітаптар, мақалалар, блогтар, сценарийлер</p> </div> <div class="infographic-item"> <i class="fas fa-music"></i> <h3>Музыкалық шығармалар</h3> <p>Әндер, әуендер, аранжировкалар</p> </div> <div class="infographic-item"> <i class="fas fa-film"></i> <h3>Аудиовизуалды шығармалар</h3> <p>Фильмдер, бейнелер, клиптер</p> </div> <div class="infographic-item"> <i class="fas fa-paint-brush"></i> <h3>Бейнелеу өнері</h3> <p>Суреттер, сызбалар, фотосуреттер</p> </div> <div class="infographic-item"> <i class="fas fa-code"></i> <h3>Бағдарламалық қамтамасыз ету</h3> <p>Қосымшалар, ойындар, скрипттер</p> </div> <div class="infographic-item"> <i class="fas fa-archway"></i> <h3>Сәулет жобалары</h3> <p>Сызбалар, жоспарлар, дизайндар</p> </div> </div> <div class="legal-badge"> Сайт авторлық құқық заңдарына толық сәйкес келеді </div> </section> <!-- "Контент" бөлімі --> <section id="content" class="section"> <h2>Контент</h2> <p>Бұл сайттағы барлық мақалалар сайт авторы жазып шығарған. Суреттер сәйкес лицензиялары бар заңды көздерден алынған.</p> <h3>Мақала: Интернеттегі суреттерді қалай дұрыс пайдалану керек</h3> <p>Интернетте суреттерді пайдаланған кезде лицензияны әрқашан тексеру қажет. Сурет тегін жүктеуге қолжетімді болса да, бұл оны коммерциялық мақсатта пайдалануға болады дегенді білдірмейді.</p> <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Бағдарламашы жұмыс істеп тұр" class="content-image"> <p class="image-caption">Фото: Lukas Blazek, Unsplash (CC0 лицензиясы)</p> <p>Бұл мақалада біз Creative Commons лицензияларының негізгі түрлерін және оларды қалай дұрыс пайдалану керектігін қарастырамыз. Сіз CC BY мен CC BY-SA лицензияларының арасында қандай айырмашылық бар екенін және қандай жағдайларда авторды көрсету қажет екенін білесіз.</p> <img src="https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Кітаптар және авторлық құқық" class="content-image"> <p class="image-caption">Фото: Janko Ferlic, Pexels (CC0 лицензиясы)</p> <p>Есіңізде болсын: Creative Commons лицензиясы бойынша материалдарды пайдаланған кезде лицензия шарттарын сақтау керек. Бұл шарттарды бұзу заңды жауапкершілікке әкелуі мүмкін.</p> </section> <!-- "Лицензиялар" бөлімі --> <section id="licenses" class="section"> <h2>Лицензиялар</h2> <p>Бұл сайтта біз цифрлық контент үшін әртүрлі лицензия түрлерін пайдаланамыз және түсіндіреміз.</p> <h3>Copyright (Авторлық құқық)</h3> <p>Дәстүрлі copyright (©) авторға шығарманы пайдалану және таратуға арнайы құқықтар береді. Мұндай материалдарды пайдалану үшін құқық иесінен рұқсат алу қажет.</p> <h3>Creative Commons</h3> <p>Creative Commons лицензиялары шығармаларды пайдалану үшін икемді шарттарды ұсынады. Негізгі түрлері:</p> <ul class="license-list"> <li><strong>CC BY</strong> — авторды көрсету шартымен кез келген пайдалануға рұқсат етіледі</li> <li><strong>CC BY-SA</strong> — авторды көрсету және сол шарттарда тарату шартымен пайдалануға және туынды жұмыстар жасауға рұқсат етіледі</li> <li><strong>CC BY-NC</strong> — коммерциялық емес пайдалануға авторды көрсету шартымен рұқсат етіледі</li> <li><strong>CC BY-ND</strong> — авторды көрсету шартымен түзетулерсіз пайдалануға рұқсат етіледі</li> </ul> <div class="law-reference"> <h4>Сайт материалының лицензиясы:</h4> <p>Бұл сайттың материалдары Creative Commons CC BY 4.0 лицензиясы бойынша таратылады. Бұл сізге материалдарды кез келген мақсатта бөлу, бейімдеу және пайдалануға рұқсат береді, тек авторды тиісті түрде көрсету шартымен.</p> </div> </section> <!-- "Құқықтық ақпарат" бөлімі --> <section id="legal" class="section"> <h2>Құқықтық ақпарат</h2> <h3>Қазақстан Республикасының заңнамасы</h3> <p>Бұл сайт «Авторлық құқық және сабақтас құқықтар туралы» Қазақстан Республикасының Заңына сәйкес құрылған.</p> <h3>Сайтты пайдалану шарттары</h3> <p>1. Бұл сайттың материалдарын тек Creative Commons CC BY 4.0 лицензиясы шарттарына сәйкес пайдалануға болады.</p> <p>2. Сайттағы барлық суреттер Unsplash, Pexels сияқты платформалардан алынған немесе автордың өзі жасаған.</p> <p>3. Егер сізде сайт контентіне қатысты сұрақтарыңыз болса, байланыс формасы арқылы хабарласыңыз.</p> <h3>Бұл сайт неге заңды?</h3> <ul class="license-list"> <li>автор көрсетілген</li> <li>лицензиялар бар</li> <li>дереккөздер қол қойылған</li> <li>пираттық контент жоқ</li> </ul> </section> </main> <!-- Сайттың төменгі бөлігі --> <footer> <div class="container footer-content"> <div class="footer-copyright"> © 2026 Baymen Ali, Nurbek Medina<br> Барлық құқықтар қорғалған </div> <div> <p>Сайт авторлық құқықты құрметтейді және қолдайды</p> </div> </div> </footer> </body> </html>
+<!DOCTYPE html>
+<html lang="kk">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>IP-Legal.kz — Цифрлық контентті заңды пайдалану</title>
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    line-height: 1.6;
+    color: #333;
+    background-color: #f9f9f9;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+header {
+    background-color: #2c3e50;
+    color: white;
+    padding: 1.5rem 0;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+
+.logo span {
+    color: #3498db;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav li {
+    margin-left: 1.5rem;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+main {
+    padding: 2rem 0;
+}
+
+.section {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 8px;
+    margin-bottom: 2rem;
+}
+
+.section h2 {
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #3498db;
+    padding-bottom: 0.5rem;
+}
+
+/* Кнопки */
+.filter-btn {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.filter-btn:hover {
+    background-color: #2c3e50;
+}
+
+/* Скрытые блоки */
+.toggle-block {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    background: #f8f9fa;
+    border-radius: 8px;
+}
+
+.illegal-badge {
+    background-color: #e74c3c;
+    color: white;
+    padding: 6px 12px;
+    border-radius: 20px;
+    display: inline-block;
+    margin-top: 15px;
+}
+
+footer {
+    background-color: #2c3e50;
+    color: white;
+    padding: 2rem 0;
+    text-align: center;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+<div class="container header-content">
+<div class="logo">IP-<span>Legal</span>.kz</div>
+<nav>
+<ul>
+<li><a href="#home">Басты бет</a></li>
+<li><a href="#content">Контент</a></li>
+<li><a href="#licenses">Лицензиялар</a></li>
+<li><a href="#legal">Құқықтық ақпарат</a></li>
+</ul>
+</nav>
+</div>
+</header>
+
+<main class="container">
+
+<section id="home" class="section">
+<h2>Цифрлық контентті заңды пайдалану</h2>
+<p>Бұл сайт авторлық құқық мәселелеріне арналған.</p>
+</section>
+
+<section id="content" class="section">
+<h2>Контент</h2>
+
+<p>Мысалдарды көру үшін батырманы басыңыз:</p>
+
+<button class="filter-btn" onclick="showBlock('books')">Кітаптар</button>
+<button class="filter-btn" onclick="showBlock('music')">Музыка</button>
+
+<!-- КНИГА -->
+<div id="books" class="toggle-block">
+<h3>Абай жолы</h3>
+<p><strong>Автор:</strong> Мұхтар Әуезов</p>
+<p>
+«Абай жолы» — қазақ әдебиетінің ұлы эпопеясы.
+</p>
+
+<div class="illegal-badge">
+© Авторлық құқықпен қорғалған
+</div>
+</div>
+
+<!-- МУЗЫКА -->
+<div id="music" class="toggle-block">
+<h3>Кайрат Нуртас</h3>
+<p>Танымал қазақ эстрада әншісі.</p>
+<p><strong>Ән:</strong> Жүрегім</p>
+
+<div class="illegal-badge">
+© Барлық құқықтар қорғалған
+</div>
+</div>
+
+</section>
+
+<section id="licenses" class="section">
+<h2>Лицензиялар</h2>
+<p>Creative Commons және Copyright туралы ақпарат.</p>
+</section>
+
+<section id="legal" class="section">
+<h2>Құқықтық ақпарат</h2>
+<p>Қазақстан Республикасының заңнамасына сәйкес.</p>
+</section>
+
+</main>
+
+<footer>
+© 2026 IP-Legal.kz
+</footer>
+
+<script>
+function showBlock(id) {
+    document.getElementById("books").style.display = "none";
+    document.getElementById("music").style.display = "none";
+    document.getElementById(id).style.display = "block";
+}
+</script>
+
+</body>
+</html>
